Tue Mar 27 20:55:29 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkliststore.c: More work on implementing sortable
	interface.

Mon Mar 26 15:48:45 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.c (gtk_window_list_toplevels): Don't
	reference the widgets in the resulting list. (#11821)
	This makes this consistent with gtk_container_children.

	* gtk/gtkwindow.c gtk/gtkwidget.c: Fix up the two
	uses of gtk_window_list_toplevels.

Mon Mar 26 15:26:17 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkimcontext.c (gtk_im_context_set_use_preedit): Add
	a virtual function to set whether the IM context should use 
	the preedit string. (#51922)
	
Mon Mar 26 14:42:59 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkpango.h: Remove stale FIXME comment.

2001-03-26  Alexander Larsson  <alla@lysator.liu.se>

	* gtk/gtkfilesel.c (gtk_file_selection_get_filename):
	Fixed bug that returned NULL if a filename was selected.

2001-03-24  Havoc Pennington  <hp@pobox.com>

	* gtk/gtkthemes.c (gtk_theme_engine_load): improve error message
	to contain the word "theme"

2001-03-24  Havoc Pennington  <hp@pobox.com>

	* gtk/gtkhsv.c (gtk_hsv_move): make motion around the ring much
	slower but finer-grained
	(gtk_hsv_focus): get initial focus on the ring or triangle 
	according to tab direction

	* gtk/testgtk.c (main): get rid of weird sleep(1) on exit

2001-03-23  Havoc Pennington  <hp@pobox.com>

	* gtk/gtkhsv.c: make this somewhat key-navigable

	* gtk/gtkfontsel.c: mnemonics

	* gtk/gtkgamma.c: mnemonics

	* gtk/gtkcolorsel.c: add mnemonics to labels

2001-03-22  Havoc Pennington  <hp@pobox.com>

	Applied big patch from Seth Lytle to fix event handler return
	values, slightly modified.

	* gtk/gtkcalendar.c (gtk_calendar_button_press): return TRUE if
	handled.
	(gtk_calendar_key_press): return TRUE for GDK_space triggers
	select_day

	* gtk/gtkclist.c (gtk_clist_button_press): return TRUE if handled
	(gtk_clist_button_release): return TRUE if handled
